--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "scotchy-scotch",
+  "name": "srijan-angular2",
   "version": "0.0.0",
+  "author": "Chirag Goel",
+  "website": "www.chirag-goel.in",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
@@ -8,7 +10,9 @@
     "start": "ng serve",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "lite": "lite-server",
+    "api": "json-server -p 8080 --watch students.json"
   },
   "private": true,
   "dependencies": {
@@ -21,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "core-js": "^2.4.1",
+    "material-design-lite": "^1.3.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
@@ -38,6 +43,7 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
+    "lite-server": "^2.3.0",
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
